<resources>
    <string name="app_name">Niraden Eats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="company_logo">company logo</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
</resources>